--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
 
             <div id="easyoptions" class="columns is-mobile">
               <div class="column">
-                <div id="option1" class="tile"></div>
+                <div class="tile"></div>
               </div>
               <div class="column">
-                <div id="option2" class="tile"></div>
+                <div class="tile"></div>
               </div>
               <div class="column">
-                <div id="option3" class="tile"></div>
+                <div class="tile"></div>
               </div>
             </div>
 
             <div id="hardoptions" class="columns is-mobile">
               <div class="column">
-                <div id="option4" class="tile"></div>
+                <div class="tile"></div>
               </div>
               <div class="column">
-                <div id="option5" class="tile"></div>
+                <div class="tile"></div>
               </div>
               <div class="column">
-                <div id="option6" class="tile"></div>
+                <div class="tile"></div>
               </div>
             </div>
 
