--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </div>
               <div class="level-item level-right has-text-centered">
                 <div>
-                  <a id="easy" class="button is-primary is-outlined">EASY</a>
+                  <a id="easy" class="button is-primary">EASY</a>
                   <a id="hard" class="button is-primary is-outlined">HARD</a>
                 </div>
               </div>
